--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <center>
                 <h2>WHO IS JAHSWILL?</h2>
             </center>
-                 <p>Enebeli Jahswill is a 21 year old student of the Southern Alberta Institute Of Technology(SAIT), majoring in Web Design And Development.
+                 <p>I am Enebeli Jahswill a 21 year old student of the Southern Alberta Institute Of Technology(SAIT), majoring in Web Design And Development.
                 My passion for Tech started almost half a decade ago when a family friend who was a developer introduced me to the python programming
                 language, and since then i have dabbled in various aspects of the Tech industry. Some of the things i have come
                 to have knowledge about since my interest in Tech started are : Backend development using Python programming language(Took a self paced course on sololearn, although i didn't complete it), 
